--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jingbo Shang"
+title                    : "Colt Jensen"
 title_separator          : "-"
-name                     : &name "Jingbo Shang"
-description              : &description "Assistant Professor @ UC San Diego"
+name                     : &name "Colt Jensen"
+description              : &description "PhD Candidate @ UGA"
 url                      : https://shangjingbo1226.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # url                      : ""
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "shangjingbo1226/shangjingbo1226.github.io"
+repository               : "colt-jensen/colt-jensen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
