--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Colt Jensen"
 title_separator          : "-"
 name                     : &name "Colt Jensen"
 description              : &description "PhD Candidate @ UGA"
-url                      : https://shangjingbo1226.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://colt-jensen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # url                      : ""
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "colt-jensen/colt-jensen.github.io"
