--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   # stackoverflow    : # http://stackoverflow.com/users/123456/username
   # steam            :
   # tumblr           :
-  twitter          : "colt_jensen"
+  twitter          : "colt_jensen_"
   # vine             :
   # weibo            :
   # xing             :
