--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Colt Jensen"
-  avatar           : "/img/avatar.jpg"
+  avatar           : "/img/CTP.jpeg"
   bio              : "PhD Candiate"
   employer         : "University of Georgia, Athens"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
