--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   # impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   # lastfm           :
   # linkedin         :
-  mastodon         : <a rel="me" href="https://mastodon.social/@coltjensen">Mastodon</a>
+  <a rel="me" href="https://mastodon.social/@coltjensen">Mastodon</a>
   # orcid            : "http://orcid.org/yourorcidurl"
   # pinterest        :
   # soundcloud       :
