--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Colt Jensen"
   avatar           : "/img/CTPc.jpeg"
-  bio              : "PhD Candiate"
+  bio              : "PhD Candidate"
   employer         : "University of Georgia, Athens"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=XkCEPH4AAAAJ&hl=en&oi=ao"
