--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   name             : "Colt Jensen"
   avatar           : "/img/CTPc.jpeg"
   bio              : "PhD Candidate"
-  employer         : "University of Georgia, Athens"
+  employer         : "Univ. of Georgia, Athens"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=XkCEPH4AAAAJ&hl=en&oi=ao"
   email            : "colt.jensen@uga.edu"
