--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Colt Jensen"
 title_separator          : "-"
 name                     : &name "Colt Jensen"
-description              : &description "PhD Candidate @ UGA"
+description              : &description "PhD Candidate at Univ. of Georgia"
 url                      : https://colt-jensen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # url                      : ""
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -83,8 +83,8 @@ analytics:
 author:
   name             : "Colt Jensen"
   avatar           : "/img/CTPc.jpeg"
-  bio              : "PhD Candidate"
-  employer         : "Univ. of Georgia, Athens"
+  bio              : "PhD Candidate at University of Georgia"
+  employer         : "Athens, Georgia"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=XkCEPH4AAAAJ&hl=en&oi=ao"
   email            : "colt.jensen@uga.edu"
