--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@ main:
     
   - title: "Contact"
     url: /contact/
+    
+  - title: "Personal"
+    url: /personal/
 
   #- title: "Awards"
     #url: /awards/
