--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Colt Jensen"
 title_separator          : "-"
 name                     : &name "Colt Jensen"
-description              : &description "PhD Candidate at the Univ. of Georgia"
+description              : &description "Assistant Professor at Georiga Southern University"
 url                      : https://colt-jensen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # url                      : ""
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
