--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ analytics:
 author:
   name             : "Colt Jensen"
   avatar           : "/img/CTPc.jpeg"
-  bio              : "PhD Candidate at University of Georgia"
-  employer         : "Athens, Georgia"
+  bio              : "Assistant Professor"
+  employer         : "Georgia Southern University"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=XkCEPH4AAAAJ&hl=en&oi=ao"
   email            : "colttjensen@gmail.com"
