--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Colt Jensen"
-  avatar           : "/img/CTPc.jpeg"
+  avatar           : "/img/headshot.jpg"
   bio              : "Assistant Professor"
   employer         : "Georgia Southern University"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
