--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,7 @@ author:
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=XkCEPH4AAAAJ&hl=en&oi=ao"
   email            : "cjensen@georgiasouthern.edu"
+  bluesky          : "colt-jensen.bsky.social"
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   # uri              :
   # bitbucket        :
@@ -109,7 +110,7 @@ author:
   # stackoverflow    : # http://stackoverflow.com/users/123456/username
   # steam            :
   # tumblr           :
-  twitter          : "colt_jensen_"
+  #twitter          : "colt_jensen_"
   # vine             :
   # weibo            :
   # xing             :
