--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=XkCEPH4AAAAJ&hl=en&oi=ao"
   email            : "cjensen@georgiasouthern.edu"
-  bluesky          : "colt-jensen.bsky.social"
+  bluesky          : "colt-jensen"
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   # uri              :
   # bitbucket        :
