--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 
 # Site Author
-author: Colt Jensen
+author: "Colt Jensen"
   name             : "Colt Jensen"
   avatar           : "/img/headshot.jpg"
   bio              : "Assistant Professor"
