--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Colt Jensen"
 title_separator          : "-"
 name                     : &name "Colt Jensen"
-description              : &description "Assistant Professor at Georiga Southern University"
+description              : &description "Assistant Professor at UNC Chapel Hill"
 url                      : https://colt-jensen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # url                      : ""
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -84,7 +84,7 @@ author:
   name             : "Colt Jensen"
   avatar           : "/img/headshot.jpg"
   bio              : "Assistant Professor"
-  employer         : "Georgia Southern University"
+  employer         : "UNC Chapel Hill"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=XkCEPH4AAAAJ&hl=en&oi=ao"
   email            : "cjensen@georgiasouthern.edu"
