--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author: 
   name             : "Colt Jensen"
-  avatar           : "/img/headshot.jpg"
+  avatar           : "/img/headshot2.jpg"
   bio              : "Assistant Professor"
   employer         : "UNC Chapel Hill"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
